# resume-app

./: .env.compose.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: deploy-railway-main.yml
agents/: .env.example  assembly.py  experience_contract.py  generation.py  pyproject.toml  resume_judge.py  validation.py  worker.py
agents/tests/: test_experience_contract.py  test_generation_pipeline.py  test_resume_judge.py  test_worker.py
backend/: AGENTS.md  Dockerfile  pyproject.toml
backend/app/api/: applications.py  base_resumes.py  internal_worker.py
backend/app/core/: config.py  workflow_contract.py
backend/app/db/: applications.py  base_resumes.py  resume_drafts.py
backend/app/services/: application_manager.py  base_resumes.py  jobs.py  pdf_export.py  progress.py  resume_parser.py  resume_render.py  workflow.py
backend/tests/: test_application_request_validation.py  test_base_resume_service.py  test_pdf_export.py  test_phase1_applications.py  test_resume_parser.py
docs/: backend-database-migration-runbook.md  build-plan.md  database_schema.md  prompts.md  resume_builder_PRD_v3.md  todo.md
docs/decisions-made/: decisions-made-1.md
docs/task-output/: 2026-04-07-generation-hang-and-cancel-fixes.md  2026-04-07-job-posting-origin-contract.md  2026-04-07-phase-3-4-generation-editing-export.md  2026-04-08-prompt-redesign-reasoning-and-upload-review.md  (+8 more)
frontend/: Dockerfile  dev-entrypoint.sh  docker-entrypoint.sh  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
shared/: workflow-contract.json
(+114 files in other folders)
